plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'

}

group 'io.indices'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.15
targetCompatibility = 1.15

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'org.jsoup:jsoup:1.11.3'
    compile 'se.michaelthelin.spotify:spotify-web-api-java:2.0.3'
    compile 'com.google.code.gson:gson:2.8.5'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': 'io.indices.tvplaylistgenerator.Bootstrap'
        )
    }
}

shadowJar {
    mergeServiceFiles()
    configurations = [project.configurations.compile]

    manifest {
        attributes 'Implementation-Version': project.version
    }
}

task copyJarToPlayground(dependsOn: 'shadowJar', type: Copy) {
    from 'build/libs/tv-playlist-generator-1.0-SNAPSHOT-all.jar'
    into "../tv-playlist-generator-playground"

    rename 'tv-playlist-generator-1.0-SNAPSHOT-all.jar', 'tv-playlist-generator.jar'
}

build.dependsOn shadowJar
